--- a/app/app_config.json
+++ b/app/app_config.json
@@ -1,8 +1,9 @@
 {
-  "auto_update_from_git" : true,
+  "auto_update_from_git" : false,
   "auto_connect_to_wifi_ap" : true,
   "wifi_max_attempts" : 3,
   "auto_start_webrepl" : true,
   "auto_start_webapp" : true,
-  "auto_start_setup_wifi" : true
+  "auto_start_setup_wifi" : true,
+  "rebuild_sha1_internal_file" : false
 }
